# evadex

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  demo_docx.json  demo_full.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
deploy/: Dockerfile  Dockerfile.bridge
docs/: REFERENCE.md  siphon-findings-2026-04-23.md  techniques.md
docs/github-actions/: evadex-daily.yml  evadex-regression.yml
examples/: mock_adapter.py
results/: format_detection_matrix.md  siphon_full_report.md  siphon_latest_report.md
src/evadex/: __init__.py  __main__.py  archive.py  audit.py  config.py
src/evadex/adapters/: base.py
src/evadex/adapters/dlpscan/: adapter.py  client.py  file_builder.py
src/evadex/adapters/dlpscan_cli/: adapter.py
src/evadex/adapters/presidio/: adapter.py  client.py
src/evadex/adapters/siphon/: adapter.py  client.py
src/evadex/adapters/siphon_cli/: adapter.py  client.py
src/evadex/bridge/: __init__.py  categories.py  metrics.py  runs.py  server.py
src/evadex/cli/: app.py
src/evadex/cli/commands/: benchmark.py  bridge.py  compare.py  doctor.py  edm.py  entropy.py  falsepos.py  generate.py  history.py  init.py  list_payloads.py  list_techniques.py  lsh.py  profile.py  quickstart.py  report.py  scan.py  schedule.py  techniques.py  trend.py
src/evadex/core/: engine.py  registry.py  result.py
src/evadex/falsepos/: __init__.py  generators.py
src/evadex/feedback/: fast_mode.py  regression_writer.py  report.py  seed_weights.py  suggestions.py  technique_history.py
src/evadex/generate/: filler.py  generator.py  templates.py
src/evadex/generate/writers/: __init__.py  _data_filler.py  archive_writer.py  barcode_writer.py  csv_writer.py  docx_writer.py  edm_json_writer.py  eml_writer.py  ics_writer.py  json_writer.py  log_writer.py  mbox_writer.py  msg_writer.py  parquet_writer.py  pdf_writer.py  sql_writer.py  sqlite_writer.py  txt_writer.py  warc_writer.py  xlsx_writer.py  xml_writer.py
src/evadex/lsh/: __init__.py  document_generator.py
src/evadex/payloads/: builtins.py  tiers.py
src/evadex/profiles/: __init__.py  runner.py  schedule.py  schema.py  storage.py
src/evadex/profiles/builtins/: __init__.py  banking-daily.yaml  canadian-ids.yaml  full-evasion.yaml  pci-dss.yaml  quick-check.yaml
src/evadex/reporters/: base.py  c2_reporter.py  compare_html_reporter.py  compare_reporter.py  html_reporter.py  json_reporter.py
src/evadex/synthetic/: __init__.py  au_medicare.py  base.py  br_cpf.py  ca_corporate.py  ca_drivers_licences.py  ca_health_cards.py  capital_markets.py  credit_card.py  de_tax_id.py  email.py  iban.py  phone.py  ramq.py  registry.py  sin.py  ssn.py  uk_nin.py  us_dl.py  validators.py
src/evadex/variants/: archive_evasion.py  barcode_evasion.py  base.py  bidirectional.py  context_injection.py  delimiter.py  encoding.py  encoding_chains.py  entropy_evasion.py  leetspeak.py  morse_code.py  regional_digits.py  soft_hyphen.py  splitting.py  structural.py  unicode_encoding.py  unicode_whitespace.py
tests/: conftest.py
tests/integration/: test_c2_integration.py  test_capital_markets_templates.py  test_cli.py  test_compare.py  test_config_cli.py  test_edm_cli.py  test_entropy_cli.py  test_falsepos_cli.py  test_feedback_cli.py  test_generate_cli.py  test_generate_frca.py  test_generate_new_features.py  test_history_trend_cli.py  test_new_features.py  test_quickstart_cli.py  test_scan_v3_21.py
tests/integration/adapters/: test_dlpscan_adapter.py  test_siphon_adapter.py
tests/unit/: test_archive.py  test_archive_writers.py  test_audit.py  test_barcode_deps_missing.py  test_barcode_writer.py  test_bridge.py  test_config.py  test_entropy_templates.py  test_evasion_mode.py  test_fast_mode.py  test_french_keywords.py  test_generate_core.py  test_key_findings.py  test_parquet_writer.py  test_regression_writer.py  test_sqlite_writer.py  test_suggestions.py  test_synthetic_v3_13.py  test_templates_v319.py  test_wrap_context.py
tests/unit/adapters/: test_parse_response.py  test_siphon_cli.py
tests/unit/core/: test_registry.py  test_result.py  test_streaming_engine.py
tests/unit/falsepos/: test_entropy_fp.py  test_generators.py
tests/unit/payloads/: test_builtins.py  test_canadian_ids.py  test_entropy_payloads.py  test_northam_tier.py  test_provincial_ids.py
tests/unit/profiles/: test_builtins.py  test_cli.py  test_runner.py  test_schedule.py  test_storage.py
tests/unit/reporters/: test_c2_reporter.py  test_html_reporter.py  test_json_reporter.py
tests/unit/synthetic/: test_capital_markets.py  test_credit_card.py  test_email.py  test_iban.py  test_phone.py  test_ramq.py  test_sin.py
tests/unit/variants/: test_barcode_evasion.py  test_bidirectional.py  test_context_injection.py  test_delimiter.py  test_encoding.py  test_encoding_chains.py  test_entropy_evasion.py  test_leetspeak.py  test_morse_code.py  test_regional_digits.py  test_soft_hyphen.py  test_splitting.py  test_structural.py  test_unicode_encoding.py  test_unicode_whitespace.py
