[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evadex"
version = "3.3.1"
description = "Comprehensive DLP evasion test suite — scanner-agnostic, file-aware"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["dlp", "security", "evasion", "testing", "compliance", "pci-dss", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "python-docx>=1.1,<2",
    "fpdf2>=2.7.9,<3",
    "openpyxl>=3.1,<4",
    "jinja2>=3.1,<4",
    "rich>=13.0,<14",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "respx>=0.21,<1",
]

[project.urls]
Homepage = "https://github.com/tbustenk/evadex"
Repository = "https://github.com/tbustenk/evadex"
"Bug Tracker" = "https://github.com/tbustenk/evadex/issues"
Changelog = "https://github.com/tbustenk/evadex/blob/main/CHANGELOG.md"

[project.scripts]
evadex = "evadex.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
