[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evadex"
version = "3.20.0"
description = "Comprehensive DLP evasion test suite — scanner-agnostic, file-aware"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["dlp", "security", "evasion", "testing", "compliance", "pci-dss", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "python-docx>=1.1,<2",
    "fpdf2>=2.7.9,<3",
    "openpyxl>=3.1,<4",
    "jinja2>=3.1,<4",
    "rich>=13.0,<14",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "respx>=0.21,<1",
    "ruff>=0.4,<1",
]
# Optional barcode/QR image generation for `evadex generate --format png|jpg|multi_barcode_png`.
# Exercises DLP scanners (e.g. Siphon) that decode QR codes and 1D/2D
# barcodes from image inputs. Install with `pip install evadex[barcodes]`.
barcodes = [
    "qrcode[pil]>=7.4,<9",
    "python-barcode[images]>=0.15,<1",
    "Pillow>=10.0,<13",
]
# Parquet and SQLite generation for `evadex generate --format parquet|sqlite`.
# Exercises DLP scanners with data-formats extractors (e.g. Siphon built with
# `--features data-formats`, which pulls the parquet + rusqlite crates).
# sqlite is stdlib, so this extra only covers Parquet.
data-formats = [
    "pyarrow>=14.0,<24",
    "pandas>=2.0,<4",
]
# Archive generation for `evadex generate --format zip|zip_nested|7z`.
# Exercises Siphon's archive extractors in `crates/siphon-core/src/extractors.rs`
# (zip is stdlib so only 7z needs an extra). mbox / ics / warc all use stdlib only.
# RAR generation is intentionally not supported here because writing RAR archives
# requires the proprietary RAR encoder which has no permissively-licensed
# Python implementation; consume real-world RAR samples instead.
archives = [
    "py7zr>=0.20,<2",
]
# HTTP bridge server for `evadex bridge` — exposes /v1/evadex/run,
# /v1/evadex/metrics, /v1/evadex/generate so frontends (siphon-c2,
# dashboards, automation) can drive evadex over HTTP.
bridge = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-multipart>=0.0.9,<1",
]

[project.urls]
Homepage = "https://github.com/tbustenk/evadex"
Repository = "https://github.com/tbustenk/evadex"
"Bug Tracker" = "https://github.com/tbustenk/evadex/issues"
Changelog = "https://github.com/tbustenk/evadex/blob/main/CHANGELOG.md"

[project.scripts]
evadex = "evadex.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"evadex.profiles.builtins" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
